--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -3,7 +3,7 @@
 {% load custom_filters %}
 {% block content %}
     
-    {% if cart_items.count == 0 %}
+    {% if not cart_items %}
         <div class="empty-cart-container">
             <p class="cart-empty-text">Your cart is empty</p>
         </div>
@@ -12,7 +12,6 @@
             <div class="shopping-cart js-shopping-cart">
                 <div>
                     <h2>Shopping Cart</h2>
-                    <a href="#" class="link-text-cart">Deselect all items</a>
                     <div class="shipping-cart-grid">
                         <div class="shipping-details-section">
                             
@@ -26,19 +25,19 @@
                     {% for item in cart_items %}
                     <div class="shipping-cart-grid js-cart-grid-{{ item.product.pid }}">
                         <div class="shipping-details-section js-cart-item">
-                            <input type="checkbox">
-                            <img src="{{ item.product.image.url }}" class="cart-item-image" alt="">
+                            <!-- <input type="checkbox"> -->
+                            <img src="{{ item.product.image.url }}" class="cart-item-image" alt="product-image">
                             <div class="cart-item-content">
                                 <h3>{{ item.product.name }}</h3>
                                 <p>FREE delivery <strong>Fri, 22 Aug</strong></p>
                                 <div class="cart-additional-options">
-                                    <div class="cart-dynamic-button js-cart-dynamic-button-{{ item.product.pid }}"><button class="js-update-quantity" data-product-id = {{ item.product.pid }} data-sub="true">-</button><h3 class="js-cart-item-quantity-{{ item.product.pid }}">{{ item.quantity }}</h3><button class="js-update-quantity" data-product-id = {{ item.product.pid }} data-sub="false">+</button></div>
+                                    <div class="cart-dynamic-button js-cart-dynamic-button-{{ item.product.pid }}">
+                                        <button class="js-update-quantity" data-product-id = "{{ item.product.pid }}" data-sub="true">-</button>
+                                        <h3 class="js-cart-item-quantity-{{ item.product.pid }}">{{ item.quantity }}</h3>
+                                        <button class="js-update-quantity" data-product-id = "{{ item.product.pid }}" data-sub="false">+</button>
+                                    </div>
                                     <div class="vertical-line"></div>
-                                    <a class="link-text-cart js-cartitem-delete" data-product-id = "{{ item.product.pid }}">Delete</a>
-                                    <!-- <div class="vertical-line"></div>
-                                    <a href="#" class="link-text-cart">Save for later</a>
-                                    <div class="vertical-line"></div>
-                                    <a href="#" class="link-text-cart">Share</a> -->
+                                    <button class="link-text-cart js-cartitem-delete" data-product-id = "{{ item.product.pid }}">Delete</button>
                                 </div>
                             </div>
                             
@@ -50,13 +49,13 @@
                     <hr class="horizontal-line js-horizontal-line-{{ item.product.pid }}">
                     {% endfor %}
                 </div>
-                <h3 class="subtotal-payment">Subtotal (5 items): <strong>₹55,195.00</strong></h3>
+                <h3 class="subtotal-payment">Subtotal ({{ items_count }} items): <strong>{{ total_amount|rupee }}</strong></h3>
                 
             </div>
 
             <div class="payment">
-                <h3 class="subtotal-payment left-align">Subtotal (5 items): <strong>₹55,195.00</strong></h3>
-                <div class="cart-payment-gift-checkbox"><input type="checkbox"><p>This order contains a gift</p></div>
+                <h3 class="subtotal-payment left-align">Subtotal ({{ items_count }} items): <strong>{{ total_amount|rupee }}</strong></h3>
+                <!-- <div class="cart-payment-gift-checkbox"><input type="checkbox"><p>This order contains a gift</p></div> -->
                 <form action="{% url 'confirm_order' %}" method="post">
                     {% csrf_token %}
                     <button class="proceed-button" type="submit">Proceed to Buy</button>
@@ -66,5 +65,8 @@
         </div>
     {% endif %}
             
-        </div>
+{% endblock %}
+
+{% block scripts %}
+        <script type="module" src="{% static 'cart/js/cart.js' %}"></script>
 {% endblock %}
