--- a/home/templates/home/product.html
+++ b/home/templates/home/product.html
@@ -43,7 +43,7 @@
             {% endif %}
             <div class="product-rating-section">
                 <p>⭐⭐⭐⭐⭐</p>
-                <p><span>{{ product.rating }}</span> (2374)</p>
+                <p><span>{{ product.rating|floatformat:"-1" }}</span> (2374)</p>
             </div>
             <hr>
             <p class="product-info">{{ product.description }}</p>
@@ -64,25 +64,9 @@
         <h2 class="related-products-section_title">Related Products</h2>
         <div class="related-products">
             {% for product in related_products %}
-            <div class="item-card">
-                <a href="{% url 'product-detail' product.pid %}" class="item-card-image-container">
-                    <img class="item-card-image" src="{{ product.image.url }}" alt="">
-                </a>
-                <p class="item-card-vendor">{{ product.vendor }}</p>
-                <div class="item-card-content">
-                    <a href="{% url 'product-detail' product.pid %}">{{ product.name }}</a>
-                    <p class="price">{{ product.price|rupee }}</p>
-                    <p>⭐ 4.5 (3746)</p>
-                    <p>FREE delivery <strong>Fri, 22 Aug</strong></p>                
-                </div>
-                {% if user.is_authenticated and product.pid in cart_products %}
-                    {% with user_cart|get:product.pid as cart_item %}
-                        <div class="js-add-to-cart-{{ product.pid }} cart-added-item-button"><button class="js-update-quantity update-quantity-button" style="font-size: 12px; font-weight: bold" data-product-id = {{ product.pid }} data-sub = "true">-</button><p class="item-quantity-{{ product.pid }}">{{ cart_item.quantity }}</p><button class="js-update-quantity update-quantity-button" style="font-size: 12px; font-weight: bold" data-product-id = {{ product.pid }} data-sub = "false">+</button></div>
-                    {% endwith %}
-                {% else %}
-                <div class="js-add-to-cart-{{ product.pid }}"><button class="btn add-to-cart-button js-update-quantity" data-product-id = {{ product.pid }} data-sub="false">Add to cart</button></div>
-                {% endif %}
-            </div>
+
+                {% include "home/includes/prod_card.html" with prod=product cart_products=cart_products %}
+
             {% endfor %}
 
         </div>
@@ -90,4 +74,8 @@
     
 
 </main>
+{% endblock %}
+
+{% block scripts %}
+    <script type="module" src="{% static 'home/js/product.js' %}"></script>
 {% endblock %}
