--- a/templates/base.html
+++ b/templates/base.html
@@ -17,13 +17,14 @@
     <div class="main-container">
         <header>
             <nav class="nav-bar">
-                <a class="nav-icons nav-flex grabzy-logo" href="/"><img class="grabzy-logo-img" src="{% static 'images/grabzy-log.svg' %}" alt="grabzy-logo"></a>
+                <a class="nav-icons nav-flex grabzy-logo" href="{% url 'home' %}"><img class="grabzy-logo-img" src="{% static 'images/grabzy-log.svg' %}" alt="grabzy-logo"></a>
                 
                 <div class="nav-search">
                     <form action="{% url 'search' %}" method="get" id="form-search">
+                        {% csrf_token %}
                         <input class="search-input js-search-input" type="text" name ="search" placeholder="Search Grabzy">
                         <button class = "search-icon-div js-search" type = 'submit'>
-                            <img class="search-icon" src="{% static 'images/search-outline.svg' %}" alt="">
+                            <img class="search-icon" src="{% static 'images/search-outline.svg' %}" alt="search-icon">
                         </button>
                     </form>  
                 </div>
@@ -36,21 +37,17 @@
                     </a>
 
                     {% if user.is_authenticated %}
-                        <a href="{% url 'profile' %}" class="nav-user-profile-container"><img src="{{ user.user_profile.profile_pic.url }}" alt="" class="nav-user-profile"></a>
-                    {% else %}
-                    <a class="nav-flex nav-icons bold-text nav-text" href="{% url 'profile' %}">
-                        Profile
-                    </a>
-                    {% endif %}
-
-                    {% if user.is_authenticated %}
+                        <a href="{% url 'profile' %}" class="nav-user-profile-container"><img src="{{ user.user_profile.profile_pic.url }}" alt="" class="nav-user-profile js-nav-user-profile"></a>
                         <a class="nav-flex nav-icons bold-text nav-text" href="{% url 'user-logout' %}">
                             Sign Out
                         </a>
                     {% else %}
-                        <a class="nav-flex nav-icons bold-text nav-text" href="{% url 'user-login' %}">
-                            Sign in
-                        </a>
+                    <a class="nav-flex nav-icons bold-text nav-text" href="{% url 'profile' %}">
+                        Profile
+                    </a>
+                    <a class="nav-flex nav-icons bold-text nav-text" href="{% url 'user-login' %}">
+                        Sign in
+                    </a>
                     {% endif %}
 
                 </div>
@@ -66,21 +63,21 @@
             <div class="footer-links">
                 <h4 class="footer-links_title">Connect with Me</h4>
                 <div class="social-media-links">
-                    <!-- <h3>Connect with Me</h3> -->
-                    <a href="#" class="social-media-icon"><img src="{% static 'images/logo-linkedin.svg' %}" alt=""></a>
-                    <a href="#" class="social-media-icon"><img src="{% static 'images/logo-facebook.svg' %}" alt=""></a>
-                    <a href="#" class="social-media-icon"><img src="{% static 'images/logo-twitter.svg' %}" alt=""></a>
-                    <a href="#" class="social-media-icon"><img src="{% static 'images/logo-instagram.svg' %}" alt=""></a>
+                    <a href="https://www.linkedin.com/in/naga-raju-moka-389b37279/" class="social-media-icon"><img src="{% static 'images/logo-linkedin.svg' %}" alt=""></a>
+                    <a href="https://github.com/nagarajumoka007" class="social-media-icon"><img src="{% static 'images/logo-github.svg' %}" alt=""></a>
+                    <a href="https://www.instagram.com/nagaraju.moka/" class="social-media-icon"><img src="{% static 'images/logo-instagram.svg' %}" alt=""></a>
+                    <a href="https://www.facebook.com/profile.php?id=100007953675940" class="social-media-icon"><img src="{% static 'images/logo-facebook.svg' %}" alt=""></a>
                 </div>
                 <p class="footer-small-text">Made with ❤️ by Moka</p>
             </div>
             
         </footer>
 
-        </div>
     </div>
-    <script type="module" src="{% static 'JavaScript/index.js' %}"></script>
-    
-    
+
+    <!-- <script type="module" src="{% static 'JavaScript/index.js' %}"></script> -->
+     {% block scripts %}
+     {% endblock %}
+     
 </body>
 </html>
