--- a/users/templates/user/profile.html
+++ b/users/templates/user/profile.html
@@ -8,8 +8,11 @@
         
             <div class="profile">
                 <h3>Account Information</h3>
+                <button class="edit-information-button js-edit-information-button" data-user-pk = "{{ user.pk }}">Edit Information</button>
                 <div class="account-section">
-                    <img src="{{ user.user_profile.profile_pic.url }}" alt="" class="profile-image">
+                    <div class="profile-image-container">
+                        <img src="{{ user.user_profile.profile_pic.url }}" alt="" class="profile-image">
+                    </div>
                     <div>
                         <p>{{ user.username }}</p>
                         <p class="profile-email">{{ user.email }}</p>
@@ -52,4 +55,8 @@
         </div>
         
     </main>
+{% endblock %}
+
+{% block scripts %}
+    <script type="module" src="{% static 'users/js/profile.js' %}"></script>
 {% endblock %}
