--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
                 <h2 class="category-section_title">Shop by Category</h2>
                 <p class="category-section_text">Find exactly what you're looking for</p>
                 <div class="category-cards-section">
-                    {% for category in catrgories %}
+                    {% for category in categories %}
                     <a href="{% url 'category-products' category.title %}" class="category-card">
                         <img src="{{ category.image.url }}" alt="{{ catrgory.title }}-image" class="category-image">
                         <h4 class="category-card_title">{{ category.title }}</h4>
